# EPSILON-trading-simulator

./: .flake8  .gitignore  .railwayignore  AI_ANALYSIS_GUIDE.md  AI_PROVIDERS_GUIDE.md  BUILD_INSTRUCTIONS.md  DEVELOPMENT.md  FEATURE_UPDATES.md  LICENSE  PROMOTION.md  README.md  UPDATED_FEATURES.md  export_analysis.py  main.py  mock.py  path_utils.py  pyproject.toml  railway.toml  refactor_helper.py  render.yaml  requirements.txt  run_tournament.py  version.py
analysis/: __init__.py  export_analysis.py  performance.py  spectral.py  stress_test.py
backend/: Procfile  config.py  database.py  main.py  requirements.txt
backend/models/: web_models.py
backend/routers/: analysis.py  auth.py  trading.py
backend/schemas/: schemas.py
backend/services/: analysis_service.py  backtest_service.py  stock_service.py  trading_service.py
backend/utils/: security.py
data/: __init__.py  stock_data_manager.py
docs/: STRESS_TEST_MODULE.md  UI_GUIDE.md
release/: STRUCTURE.md
src/core/: spectral_analysis.py
strategies/: README.md  __init__.py  backtest_engine.py  base_strategy.py  example_strategy.py  tournament_engine.py
tests/: __init__.py  test_strategies.py
trading/: __init__.py  trade_manager.py
ui/: __init__.py
utils/: __init__.py  config.py  logger.py
website/: README.md  auth.ts  middleware.ts  package-lock.json  package.json  tailwind.config.cjs  vercel.json
website/app/: globals.css  layout.tsx  page.module.css  page.tsx
website/app/auth/: layout.tsx
website/app/dashboard/: layout-client.tsx  layout.tsx  page.tsx
website/app/download/: page.tsx
website/app/landing/: page.module.css  page.tsx
website/app/simulator/: page.tsx
website/app/video/: page.tsx
website/components/: video-player.tsx
website/hooks/: useAuth.tsx
website/lib/: api.ts  types.ts
website/prisma/: schema.prisma  seed.ts
website/types/: next-auth.d.ts
(+61 files in other folders)
